# claude-skill-cited-research

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  TEST_PLAN.md  plan-anti-bias-phase1.md  plan-anti-bias-phase2.md  plan-anti-bias-phase3.md  plan-anti-bias-phase4.md  plan-anti-bias-phase5.md  plan-anti-bias-phase6.md  pyproject.toml
agents/: citation-audit.md  consistency-review.md  research-analysis.md  research-counter-discovery.md  research-discovery.md
references/: citation-format.md  research-basis.md  sub-agent-prompts.md  update-workflow.md
scripts/: _data_paths.py  multi-search.py  multi_search.py  put_data.py  reap_data.py
tests/: test_data_wrappers.py  test_multi_search.py
